# ssi

./: .gitignore  AUDIT.md  COMPLIANCE.md  CONTRIBUTING.md  DECISIONS.md  FAILURE.md  IMPLEMENTATION.md  NOTICE  PILOT_README.md  README.md  REFERENCE_IMPLEMENTATIONS.md  SECURITY.md  SPEC.md  next.config.js  package-lock.json  package.json  postcss.config.js  start-all-services.ps1  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: codeql.yml  tests.yml
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/cloud/: page.tsx
app/community/: page.tsx
app/developers/: page.tsx
app/downloads/: page.tsx
app/ecosystem/: page.tsx
app/enterprises/: page.tsx
app/explorer/: page.tsx
app/legal/terms/: page.tsx
app/news/: page.tsx
app/protocol/: page.tsx
app/regulators/: page.tsx
app/research/: page.tsx
app/safety/: page.tsx
app/standards/: page.tsx
components/: footer.tsx  navigation.tsx
components/explorer/: ChainTimeline.tsx  ExportButton.tsx  FileUploadZone.tsx  RecordDetailPanel.tsx  StatusBanner.tsx  TamperEvidencePanel.tsx
components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  slider.tsx  sonner.tsx  switch.tsx  table.tsx  (+7 more)
docker/: gateway.Dockerfile  kernel.Dockerfile
docs/: CONFORMANCE.md  WHY_SSI.md
hooks/: use-toast.ts
lib/: utils.ts
schemas/: README.md
sdks/python/: pyproject.toml
sdks/python/examples/: basic_usage.py  decorator_usage.py
sdks/python/ssi_protocol/: __init__.py  client.py  decorators.py  exceptions.py
spec/: SSI-v1.0.md
(+53 files in other folders)
